<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_row="2"
        android:layout_column="1"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginTop="10sp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#7C3636"
        android:textSize="35sp" />

    <Button
        android:id="@+id/ver_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/ver"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        />

    <Button
        android:id="@+id/botonNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/ingresar"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        />

    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/eliminar"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        />

</LinearLayout>