<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo1"
    tools:context=".NuevoProductoActivity">

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Ingrese Productos al Carrito"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#091B7E"
        android:textSize="35sp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/nombreP"
        android:textStyle="bold|italic"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/ingresarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese El Producto"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/cantidad"
        android:textStyle="bold|italic"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/ingresarCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese La Cantidad"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/seleccione"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/ingresarUnidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:entries="@array/unidad"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/numcal"
        android:textStyle="bold|italic"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/otraUnidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingrese N° Calzado"
        android:inputType="number"
        android:layout_marginTop="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnIngresarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingresar Producto"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        />

</LinearLayout>